# talk2n8n

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  main.py  pyproject.toml
src/: assistant.py  conversation.py  exception.py  protocol.py  speech_to_text.py  text_to_speech.py  utils.py
